echoes and berto almost done

--- a/index.html
+++ b/index.html
@@ -274,17 +274,17 @@
             <a href="#about">About Me</a>
             <a href="#projects">Projects</a>
         </nav>
-        <a href="path_to_resume.pdf" class="download-link">Download Resume</a>
+        <a href="K.Driscoll_Resume.pdf">Download Resume</a>
     </header>
 
     <!-- About Me Section -->
     <section id="about">
         <h2>About Me</h2>
-        <p>Welcome to my portfolio! I am Kyla, a Narrative Designer passionate about storytelling in games and media. My journey started at a young age, where I engaged in tabletop games and later ventured into game mechanics development. When I'm not designing narratives, I love mentoring future engineers through FIRST Robotics, providing mentorship, and serving as a competition judge.</p>
+        <p>Hello, thanks for stopping by! My name is Kyla, a Narrative Designer passionate about storytelling in interactive media. When I'm not designing narratives, I love mentoring future engineers through FIRST Robotics.
         <div class="bio-container">
-            <img src="478821730_1794211681122386_8328149616478346293_n.jpg" alt="Your Bio Picture">
+            <img src="478821730_1794211681122386_8328149616478346293_n.jpg" alt="Bio Picture">
             <div class="bio-text">
-                <p><strong>My Journey:</strong> From my early days designing board games with my father, to creating worlds through narrative design, I've always been driven by my love of gaming and storytelling. I now focus on bringing immersive and engaging narratives to life in both interactive and non-interactive formats.</p>
+                <p><strong>My Journey:</strong> From my early days designing board games with my father, to creating worlds through narrative design, I've always been driven by my love of gaming and storytelling. I now focus on bringing immersive and engaging narratives to life in interactive media.
             </div>
         </div>
 
@@ -292,7 +292,7 @@
         <div class="contact-info">
             <p>Feel free to reach out to me via email or connect with me on LinkedIn!</p>
             <p><strong>Email:</strong> kylacdriscoll@gmail.com</p>
-            <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/kyla" target="_blank">linkedin.com/in/kyla</a></p>
+            <p><strong>LinkedIn:</strong> <a href="www.linkedin.com/in/kyladriscoll" target="_blank">linkedin.com/in/kyladriscoll</a></p>
         </div>
     </section>
 
@@ -303,14 +303,15 @@
             <div class="project-card">
                 <img src="TerrorBird_noBackground.png" alt="Project 1">
                 <h3>Echoes of the Salt Flats</h3>
-                <p>A tabletop roleplaying game created to learn how worldbuilding surfaces across different forms of interactive media</p>
+                <p>A tabletop roleplaying game created to explore how worldbuilding surfaces across different forms of interactive media </p>
                 <a href="#project1" class="project-link">Learn More</a>
             </div>
 
             <div class="project-card">
-                <img src="https://via.placeholder.com/400x200" alt="Project 2">
-                <h3>Exile in the Mechnoir Desert</h3>
-                <p>An action RPG blending steampunk with ancient mythology. Fight, explore, and uncover secrets hidden in a vast desert.</p>
+                <img src="Plates_Of_Power.png" alt="Project 2">
+                <h3>Plates of Power</h3>
+                <p>Plates of Power is a rogue-like game inspired by Latino Culture, emphasizing power, failure, and the importance of community.</p>
+
                 <a href="#project2" class="project-link">Learn More</a>
             </div>
 
@@ -328,7 +329,7 @@
     <h3>Echoes of the Salt Flats</h3>
     <div class="project-detail-container">
         <div class="project-detail-image">
-            <img src="TerrorBird_noBackground.png" width="250" height="250">
+            <img src="TerrorBird_noBackground.png" width="300" height="250">
         </div>
         <div class="project-detail-text">
             <p>A deep exploration into survival and environmental change set in a harsh desert wasteland. Players uncover ancient mysteries and navigate harsh conditions to survive.</p>
@@ -344,13 +345,14 @@
 
 
 <section id="project2" class="project-details">
-    <h3>Exile in the Mechnoir Desert</h3>
+    <h3>Plates of Power
     <div class="project-detail-container">
         <div class="project-detail-image">
-            <img src="https://via.placeholder.com/600x300" alt="Exile in the Mechnoir Desert">
+            <img src="Mentor_Sticker01.png"width="300" height="250"
         </div>
         <div class="project-detail-text">
-            <p>An action RPG where players face challenges using a blend of ancient mythology and futuristic steampunk technology. Each decision affects the fate of the desert.</p>
+            <p>Plates of Power is a rogue-like game inspired by Latino Culture, emphasizing power, failure, and the importance of community. </p> Returning home from college, Ale Zardoya hears of her sister's disappearance and must embrace the role of Champion</p> as she embarks on a mission to find her.</p>
+
             <p><strong>Key Features:</strong></p>
             <ul>
                 <li>Action-based combat system</li>
