studio berto done

--- a/index.html
+++ b/index.html
@@ -345,23 +345,27 @@
 
 
 <section id="project2" class="project-details">
-    <h3>Plates of Power
+    <h3>Plates of Power</h3>
     <div class="project-detail-container">
         <div class="project-detail-image">
-            <img src="Mentor_Sticker01.png"width="300" height="250"
+            <img src="Mentor_Sticker01.png" alt="Plates of Power" width="300" height="250">
         </div>
         <div class="project-detail-text">
-            <p>Plates of Power is a rogue-like game inspired by Latino Culture, emphasizing power, failure, and the importance of community. </p> Returning home from college, Ale Zardoya hears of her sister's disappearance and must embrace the role of Champion</p> as she embarks on a mission to find her.</p>
-
-            <p><strong>Key Features:</strong></p>
+            <p>Plates of Power is a rogue-like game inspired by Latino culture, emphasizing power, failure, and the importance of community. Returning home from college, Ale Zardoya hears of her sister's disappearance and must embrace the role of Champion as she embarks on a mission to find her.</p>
+            <p><strong>Social Media Manager: </strong></p>
             <ul>
-                <li>Action-based combat system</li>
-                <li>Branching storylines</li>
-                <li>Mythological lore integration</li>
+                
             </ul>
+            <p></strong> I was the sole Social Media Marketing Manager for Plates of Power.</p>
+                 During the 14 weeks with this team, I created a social media campaign to engage the community and promote the game.</p>
+                 </p>
+        To view my work, please visit the Linktree for Plates of Power's home studio, 
+             <a href=http://linktr.ee/studioberto?fbclid=PAZXh0bgNhZW0CMTEAAaYz0dTAXeZkSU-lqbegAYtLN-FTph3kY46jSCxXANNE4EJop3rPS6LVkno_aem__pIIIprr802mlTdLNnlk3w target="_blank">Studio Berto.
         </div>
     </div>
 </section>
+
+
 
 <section id="project3" class="project-details">
     <h3>Celestial Guardians</h3>
