--- a/index.html
+++ b/index.html
@@ -324,57 +324,62 @@
         </div>
     </section>
 
-<!-- Project Details Section -->
-<section id="project1" class="project-details">
-    <h3>Echoes of the Salt Flats</h3>
-    <div class="project-detail-container">
-        <div class="project-detail-image">
-            <img src="TerrorBird_noBackground.png" width="300" height="250">
+<!-- Project 1 -->
+<section id="project1" class="project-details" style="background: #1e1e2f; padding: 2rem; border-radius: 1rem; box-shadow: 0 4px 10px rgba(0,0,0,0.3); margin-bottom: 2rem;">
+    <h3 style="color: #cba6f7; font-size: 1.8rem; margin-bottom: 1rem;">Echoes of the Salt Flats</h3>
+    <div class="project-detail-container" style="display: flex; gap: 1.5rem; align-items: center; flex-wrap: wrap;">
+        <div class="project-detail-image" style="flex: 1; min-width: 250px;">
+            <img src="TerrorBird_noBackground.png" alt="Echoes of the Salt Flats" width="500" height="400" style="border-radius: 0.75rem;">
         </div>
-        <div class="project-detail-text">
-            <p>A deep exploration into survival and environmental change set in a harsh desert wasteland. Players uncover ancient mysteries and navigate harsh conditions to survive.</p>
-            <p><strong>Key Features:</strong></p>
+        <div class="project-detail-text" style="flex: 2; color: #ddd; font-size: 1rem;">
+            <p><strong>Echoes of the Salt Flats</strong> is a Tabletop RPG featuring a unique crafting mechanic, designed to explore how worldbuilding surfaces in different forms of interactive media.</p>
+            <p>Fluxians have been living peacefully with their Terror Birds for years. But when Terror Birds suddenly start passing away on the borders of the salt flats, it is up to the crew to figure out why—and how to stop their sacred companions from being killed.</p>
+
+            <p><strong>Narrative Designer:</strong> Throughout this year-long project, I worked closely with Colin Gallagher to create a unique TTRPG. I took on many roles during this project, including social media manager, showcase manager, and narrative designer. All artwork was created by Saida Bahtierova.</p>
+
+            <p>To view all relevant materials, please check out the following resources:</p>
             <ul>
-                <li>Open-world exploration</li>
-                <li>Environmental storytelling</li>
-                <li>Character development</li>
+                <li><a href="06 Echoes of the Salt Flats Draft (1).pdf" target="_blank" style="color: #cba6f7; text-decoration: underline;">Echoes of the Salt Flats - Quick Start Guide</a></li>
+                <li><a href="Character Sheet - Echoes of the Salt Flat (2).pdf" target="_blank" style="color: #cba6f7; text-decoration: underline;">Echoes of the Salt Flats - Character Sheet</a></li>
+                <li><a href="https://www.instagram.com/echoes_of_the_saltflats?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" style="color: #cba6f7; text-decoration: underline;">Echoes of the Salt Flats - Instagram</a></li>
             </ul>
         </div>
     </div>
 </section>
 
+<!-- Divider between Project 1 and 2 -->
+<hr style="border: none; height: 2px; background: #cba6f7; width: 80%; margin: 2rem auto;">
 
-<section id="project2" class="project-details">
-    <h3>Plates of Power</h3>
-    <div class="project-detail-container">
-        <div class="project-detail-image">
-            <img src="Mentor_Sticker01.png" alt="Plates of Power" width="300" height="250">
+<!-- Project 2 -->
+<section id="project2" class="project-details" style="background: #1e1e2f; padding: 2rem; border-radius: 1rem; box-shadow: 0 4px 10px rgba(0,0,0,0.3); margin-bottom: 2rem;">
+    <h3 style="color: #cba6f7; font-size: 1.8rem; margin-bottom: 1rem;">Plates of Power</h3>
+    <div class="project-detail-container" style="display: flex; gap: 1.5rem; align-items: center; flex-wrap: wrap;">
+        <div class="project-detail-image" style="flex: 1; min-width: 250px;">
+            <img src="Mentor_Sticker01.png" alt="Plates of Power" width="300" height="250" style="border-radius: 0.75rem;">
         </div>
-        <div class="project-detail-text">
-            <p>Plates of Power is a rogue-like game inspired by Latino culture, emphasizing power, failure, and the importance of community. Returning home from college, Ale Zardoya hears of her sister's disappearance and must embrace the role of Champion as she embarks on a mission to find her.</p>
-            <p><strong>Social Media Manager: </strong></p>
-            <ul>
-                
-            </ul>
-            <p></strong> I was the sole Social Media Marketing Manager for Plates of Power.</p>
-                 During the 14 weeks with this team, I created a social media campaign to engage the community and promote the game.</p>
-                 </p>
-        To view my work, please visit the Linktree for Plates of Power's home studio, 
-             <a href=http://linktr.ee/studioberto?fbclid=PAZXh0bgNhZW0CMTEAAaYz0dTAXeZkSU-lqbegAYtLN-FTph3kY46jSCxXANNE4EJop3rPS6LVkno_aem__pIIIprr802mlTdLNnlk3w target="_blank">Studio Berto.
+        <div class="project-detail-text" style="flex: 2; color: #ddd; font-size: 1rem;">
+            <p><strong>Plates of Power</strong> is a rogue-like game inspired by Latino culture, emphasizing power, failure, and the importance of community. Returning home from college, Ale Zardoya hears of her sister's disappearance and must embrace the role of Champion as she embarks on a mission to find her.</p>
+
+            <p><strong>Social Media Manager:</strong> I was the sole Social Media Marketing Manager for Plates of Power. During the 14 weeks with this team, I created a social media campaign to engage the community and promote the game.</p>
+
+            <p>To view my work, please visit the Linktree for Plates of Power's home studio, <a href="https://linktr.ee/studioberto" target="_blank" style="color: #cba6f7; text-decoration: underline;">Studio Berto</a>.</p>
         </div>
     </div>
 </section>
 
+<!-- Divider between Project 2 and 3 -->
+<hr style="border: none; height: 2px; background: #cba6f7; width: 80%; margin: 2rem auto;">
 
-
-<section id="project3" class="project-details">
-    <h3>Celestial Guardians</h3>
-    <div class="project-detail-container">
-        <div class="project-detail-image">
-            <img src="https://via.placeholder.com/600x300" alt="Celestial Guardians">
+<!-- Project 3 -->
+<section id="project3" class="project-details" style="background: #1e1e2f; padding: 2rem; border-radius: 1rem; box-shadow: 0 4px 10px rgba(0,0,0,0.3); margin-bottom: 2rem;">
+    <h3 style="color: #cba6f7; font-size: 1.8rem; margin-bottom: 1rem;">Celestial Guardians</h3>
+    <div class="project-detail-container" style="display: flex; gap: 1.5rem; align-items: center; flex-wrap: wrap;">
+        <div class="project-detail-image" style="flex: 1; min-width: 250px;">
+            <img src="https://via.placeholder.com/600x300" alt="Celestial Guardians" style="border-radius: 0.75rem; width: 100%; height: auto;">
         </div>
-        <div class="project-detail-text">
-            <p>A strategy game set in a world where celestial beings must defend their elements. Players must choose wisely to restore balance to the world before it's too late.</p>
+        <div class="project-detail-text" style="flex: 2; color: #ddd; font-size: 1rem;">
+            <p><strong>Celestial Guardians</strong> is a strategy game set in a world where celestial beings must defend their elements. Players must choose wisely to restore balance to the world before it's too late.</p>
+
             <p><strong>Key Features:</strong></p>
             <ul>
                 <li>Turn-based tactical gameplay</li>
@@ -384,6 +389,7 @@
         </div>
     </div>
 </section>
+
 
 
     <!-- Footer Section -->
