--- a/index.html
+++ b/index.html
@@ -316,13 +316,15 @@
             </div>
 
             <div class="project-card">
-                <img src="https://via.placeholder.com/400x200" alt="Project 3">
-                <h3>Celestial Guardians</h3>
-                <p>A strategy-based game where players protect the elements through powerful celestial beings. Will you restore balance?</p>
+                <img src="Screenshot 2025-03-29 180650.png" alt="Craven">
+                <h3>Craven</h3>
+                <p>A single-player cooking game that celebrates Jamaican culture and explores the emotional journey of studying abroad.</p>
                 <a href="#project3" class="project-link">Learn More</a>
             </div>
-        </div>
-    </section>
+            </div>
+            </section>
+            
+</p>
 
 <!-- Project 1 -->
 <section id="project1" class="project-details" style="background: #1e1e2f; padding: 2rem; border-radius: 1rem; box-shadow: 0 4px 10px rgba(0,0,0,0.3); margin-bottom: 2rem;">
@@ -372,23 +374,42 @@
 
 <!-- Project 3 -->
 <section id="project3" class="project-details" style="background: #1e1e2f; padding: 2rem; border-radius: 1rem; box-shadow: 0 4px 10px rgba(0,0,0,0.3); margin-bottom: 2rem;">
-    <h3 style="color: #cba6f7; font-size: 1.8rem; margin-bottom: 1rem;">Celestial Guardians</h3>
+    <h3 style="color: #cba6f7; font-size: 1.8rem; margin-bottom: 1rem;">Craven</h3>
     <div class="project-detail-container" style="display: flex; gap: 1.5rem; align-items: center; flex-wrap: wrap;">
         <div class="project-detail-image" style="flex: 1; min-width: 250px;">
-            <img src="https://via.placeholder.com/600x300" alt="Celestial Guardians" style="border-radius: 0.75rem; width: 100%; height: auto;">
+            <img src="Screenshot 2025-03-29 180650.png" alt="Craven" style="border-radius: 0.75rem; width: 100%; height: auto;">
         </div>
         <div class="project-detail-text" style="flex: 2; color: #ddd; font-size: 1rem;">
-            <p><strong>Celestial Guardians</strong> is a strategy game set in a world where celestial beings must defend their elements. Players must choose wisely to restore balance to the world before it's too late.</p>
+            <p><strong>Craven</strong> is a single-player cooking game for the Nintendo Switch that celebrates Jamaican
+                 culture while exploring the emotional journey of studying abroad. Players will cook traditional 
+                 Jamaican dishes, learn about culture, and experience the warmth of home through Sharnell's story.
+                </p>Craven was created as a cozy game concept in the first cozy games class held at Worcester Polytechnic Institute.
+
 
             <p><strong>Key Features:</strong></p>
             <ul>
-                <li>Turn-based tactical gameplay</li>
-                <li>Elemental guardians with unique abilities</li>
-                <li>Strategic resource management</li>
+                <li>Engaging cooking mechanics</li>
+                <li>Emotional narrative about homesickness and cultural identity</li>
+                <li>Handcrafted, authentic Jamaican recipes</li>
+                <li>Relatable family interactions and story progression</li>
             </ul>
+
+            <p><strong>Game Progression:</strong></p>
+            <ul>
+                <li>Stop 1: Boston Bay (Rice & Peas with Delroy)</li>
+                <li>Stop 2: Kingston (Jerk Chicken)</li>
+                <li>Stop 3: Old Harbour (Oxtail Stew and Spinners with Auntie Heather)</li>
+                <li>Stop 4: Mandeville (Ackee and Saltfish)</li>
+                <li>Stop 5: Spanish Town (Curry Goat)</li>
+            </ul>
+
+            <p><strong>Design Pillars:</strong> Expression, Tradition, Nostalgia</p>
+            <p><li><a href="Craven - Cozy Games FInal Project.docx - Google Docs.pdf" target="_blank" style="color: #cba6f7; text-decoration: underline;">View Craven's design document here.
+
         </div>
     </div>
 </section>
+
 
 <!-- Media Queries for Responsiveness -->
 <style>
