--- a/index.html
+++ b/index.html
@@ -280,7 +280,9 @@
     <!-- About Me Section -->
     <section id="about">
         <h2>About Me</h2>
-        <p>Hello, thanks for stopping by! My name is Kyla, a Narrative Designer passionate about storytelling in interactive media. When I'm not designing narratives, I love mentoring future engineers through FIRST Robotics.
+        <p>Hello, thanks for stopping by! My name is Kyla, a Narrative Designer from Gardiner, Maine passionate about storytelling in 
+            interactive media. When I'm not designing narratives, I love mentoring future engineers through FIRST 
+            Robotics.
         <div class="bio-container">
             <img src="478821730_1794211681122386_8328149616478346293_n.jpg" alt="Bio Picture">
             <div class="bio-text">
@@ -292,7 +294,7 @@
         <div class="contact-info">
             <p>Feel free to reach out to me via email or connect with me on LinkedIn!</p>
             <p><strong>Email:</strong> kylacdriscoll@gmail.com</p>
-            <p><strong>LinkedIn:</strong> <a href="www.linkedin.com/in/kyladriscoll" target="_blank">linkedin.com/in/kyladriscoll</a></p>
+            <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/kyladriscoll" target="_blank">linkedin.com/in/kyladriscoll</a></p>
         </div>
     </section>
 
@@ -321,11 +323,12 @@
                 <p>A single-player cooking game that celebrates Jamaican culture and explores the emotional journey of studying abroad.</p>
                 <a href="#project3" class="project-link">Learn More</a>
             </div>
-            </div>
-            </section>
-            
-</p>
+        </div>
+    </section>
+    <!-- Remaining sections and footer go here -->
 
+</body>
+</html>
 <!-- Project 1 -->
 <section id="project1" class="project-details" style="background: #1e1e2f; padding: 2rem; border-radius: 1rem; box-shadow: 0 4px 10px rgba(0,0,0,0.3); margin-bottom: 2rem;">
     <h3 style="color: #cba6f7; font-size: 1.8rem; margin-bottom: 1rem;">Echoes of the Salt Flats</h3>
@@ -340,7 +343,7 @@
             <p><strong>Narrative Designer:</strong> Throughout this year-long project, I worked closely with Colin Gallagher to create a unique TTRPG. I took on many roles during this project, including social media manager, showcase manager, and narrative designer. All artwork was created by Saida Bahtierova.</p>
 
             <p>To view all relevant materials, please check out the following resources:</p>
-            <ul>
+            <ul style="list-style-type: none; padding-left: 0;">
                 <li><a href="06 Echoes of the Salt Flats Draft (1).pdf" target="_blank" style="color: #cba6f7; text-decoration: underline;">Echoes of the Salt Flats - Quick Start Guide</a></li>
                 <li><a href="Character Sheet - Echoes of the Salt Flat (2).pdf" target="_blank" style="color: #cba6f7; text-decoration: underline;">Echoes of the Salt Flats - Character Sheet</a></li>
                 <li><a href="https://www.instagram.com/echoes_of_the_saltflats?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" style="color: #cba6f7; text-decoration: underline;">Echoes of the Salt Flats - Instagram</a></li>
@@ -382,34 +385,32 @@
         <div class="project-detail-text" style="flex: 2; color: #ddd; font-size: 1rem;">
             <p><strong>Craven</strong> is a single-player cooking game for the Nintendo Switch that celebrates Jamaican
                  culture while exploring the emotional journey of studying abroad. Players will cook traditional 
-                 Jamaican dishes, learn about culture, and experience the warmth of home through Sharnell's story.
-                </p>Craven was created as a cozy game concept in the first cozy games class held at Worcester Polytechnic Institute.
-
+                 Jamaican dishes, learn about culture, and experience the warmth of home through Sharnell's story.</p>
+            <p>Craven was created as a cozy game concept in the first cozy games class held at Worcester Polytechnic Institute.</p>
 
             <p><strong>Key Features:</strong></p>
-            <ul>
+            <ul style="list-style-type: none; padding-left: 0;">
                 <li>Engaging cooking mechanics</li>
                 <li>Emotional narrative about homesickness and cultural identity</li>
                 <li>Handcrafted, authentic Jamaican recipes</li>
                 <li>Relatable family interactions and story progression</li>
             </ul>
-
+        </p>
             <p><strong>Game Progression:</strong></p>
-            <ul>
+            <ul style="list-style-type: none; padding-left: 0;">
                 <li>Stop 1: Boston Bay (Rice & Peas with Delroy)</li>
                 <li>Stop 2: Kingston (Jerk Chicken)</li>
                 <li>Stop 3: Old Harbour (Oxtail Stew and Spinners with Auntie Heather)</li>
                 <li>Stop 4: Mandeville (Ackee and Saltfish)</li>
                 <li>Stop 5: Spanish Town (Curry Goat)</li>
             </ul>
-
+            
             <p><strong>Design Pillars:</strong> Expression, Tradition, Nostalgia</p>
-            <p><li><a href="Craven - Cozy Games FInal Project.docx - Google Docs.pdf" target="_blank" style="color: #cba6f7; text-decoration: underline;">View Craven's design document here.
-
+            <!-- Added link for the design document -->
+            <p>View Craven's design document <a href="Craven - Cozy Games FInal Project.docx - Google Docs.pdf" target="_blank" style="color: #cba6f7; text-decoration: underline;">here</a>.</p>
         </div>
     </div>
 </section>
-
 
 <!-- Media Queries for Responsiveness -->
 <style>
@@ -454,11 +455,7 @@
     }
 </style>
 
-
-    <!-- Footer Section -->
-    <footer>
-        <p>&copy; 2025 Kyla Driscoll | All Rights Reserved</p>
-    </footer>
-
-</body>
-</html>
+<!-- Footer Section -->
+<footer>
+    <p>Kyla Driscoll - Gardiner, Maine - kylacdriscoll@gmail.com</p>
+</footer>
