changed gardiner to pittston

--- a/index.html
+++ b/index.html
@@ -526,5 +526,5 @@
 
 <!-- Footer Section -->
 <footer>
-    <p>Kyla Driscoll - Gardiner, Maine - kylacdriscoll@gmail.com</p>
+    <p>Kyla Driscoll - Pittston, Maine, USA - kylacdriscoll@gmail.com</p>
 </footer>
