--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     }
     nav.navbar a, .dropbtn {
       color:#fff; text-decoration:none; font-size:1.1rem;
-      text-transform:uppercase; background:none; border:none;
+       background:none; border:none;
       cursor:pointer; padding:0; transition:color .3s;
     }
     nav.navbar a:hover, .dropbtn:hover { color:#D6A3E1; }
@@ -198,17 +198,23 @@
   <!-- About Me Section -->
   <section id="about">
     <h2>About Me</h2>
-    <p>Hello, thanks for stopping by! My name is Kyla, a Narrative Designer from Pittston, Maine passionate about storytelling in interactive media. When I'm not designing narratives, I love mentoring future engineers through FIRST Robotics.</p>
+  
+
     <div class="bio-container">
-      <img src="478821730_1794211681122386_8328149616478346293_n.jpg" alt="Bio Picture">
+      <img src="478821730_1794211681122386_8328149616478346293_n.jpg" alt="Kyla Driscoll">
+    
       <div class="bio-text">
-        <p><strong>My Journey:</strong> From my early days designing board games with my father, to creating worlds through narrative design, I've always been driven by my love of gaming and storytelling. I now focus on bringing immersive and engaging narratives to life in interactive media.</p>
-      </div>
-    </div>
+        <p><strong>My Journey:</strong> From my early days designing board games with my father to creating worlds through narrative design, I’ve always been driven by my love of gaming and storytelling.</p>
+        <p>Now, I focus on bringing immersive and engaging narratives to life in interactive media.</p>
+        
+  
     <div class="contact-info">
-      <p>Feel free to reach out to me via email or connect with me on LinkedIn!</p>
-      <p><strong>Email:</strong> kylacdriscoll@gmail.com</p>
-      <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/kyladriscoll" target="_blank">linkedin.com/in/kyladriscoll</a></p>
+      <p>
+        Feel free to reach out via 
+        <a href="mailto:kylacdriscoll@gmail.com">kylacdriscoll@gmail.com</a> 
+        or connect on 
+        <a href="https://www.linkedin.com/in/kyladriscoll" target="_blank">LinkedIn</a>.
+      </p>
     </div>
   </section>
 
