--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@
     </div>
     <!-- Right: PDF -->
     <div style="flex: 1; min-width: 300px; max-width: 600px;">
-      <p style="text-align: center;"><strong>Design Document</strong></p>
-      <iframe src="Craven - Cozy Games FInal Project.docx - Google Docs.pdf" width="100%" height="500px" style="border: 1px solid #cba6f7; border-radius: 0.5rem;"></iframe>
+      
+      <iframe src="Craven.pdf" width="100%" height="500px" style="border: 1px solid #cba6f7; border-radius: 0.5rem;"></iframe>
     </div>
   </div>
 </section>
